# Twitter-Sentiment-Analysis-Using-Pyspark-in-Big-Data

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: twitter_sentiment_analysis_emr.ipynb
src/: __init__.py  pipeline.py  run_pipeline.py  text_cleaning.py  train_classifier.py  xquik_export.py
tests/: test_text_cleaning.py  test_xquik_export.py
