[project]
name = "twitter-sentiment-pyspark"
version = "1.0.0"
description = "Distributed sentiment analysis of 18M+ tweets with PySpark on AWS EMR"
authors = [{ name = "Zaeem ul Islam" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pyspark>=3.4",
    "textblob>=0.17",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
